--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,9 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap");
 * {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 a {
   text-decoration: none;
   color: black;
+}
+body {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+main {
+  width: 100vw;
+  max-width: 100%;
+}
+.-b-x {
+  box-shadow: 0px 0px 10px #cccbcb;
+}
+.-br {
+  border-radius: 5px;
 }
