--- a/client/src/Design/products_scroll.css
+++ b/client/src/Design/products_scroll.css
@@ -3,6 +3,8 @@
   position: relative;
   border-radius: 5px;
   width: 100%;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px #cccbcb;
 }
 
 .-sc-b,
@@ -31,9 +33,6 @@
 .-ct:hover .-sc-b {
   display: block;
 }
-.-ct:hover .-sc-b {
-  display: block;
-}
 .-sc-n > i,
 .-sc-b > i {
   pointer-events: none;
@@ -55,22 +54,49 @@
 }
 .-scroll {
   height: calc(100% - 50px);
-  margin-top: 50px;
+  margin-top: 45px;
   display: flex;
-  padding-bottom: 15px;
+  justify-content: flex-start;
+  align-items: center;
   overflow-x: hidden;
 }
 .-ct-item {
-  background-color: red;
+  width: 210px;
+  border-radius: 5px;
   height: 95%;
   display: flex;
   flex-direction: column;
-  margin: 0px 5px;
+  justify-content: space-around;
+  margin: 5px;
+}
+.-ct-item:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 .-ct-item > div:first-child {
-  flex: 1;
+  flex: 2;
+}
+.-ct-item > div:nth-child(2) {
+  flex: 0.5;
+  padding: 5px 10px;
 }
 .-ct-item > div:first-child img {
-  width: 210px;
-  height: 210px;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
+.-ct-item-name {
+  width: 100%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+}
+.-ct-item-price {
+  padding: 5px 0px;
+  width: 100%;
+  font-weight: 600;
+  font-size: 16px;
+}
+.-ct-item-price-before {
+  text-decoration: line-through;
 }
