--- a/client/src/app.css
+++ b/client/src/app.css
@@ -5,12 +5,21 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+::-webkit-scrollbar {
+  width: 8.5px;
+  background-color: rgba(0, 0, 0, 0.15);
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.35);
+}
 a {
   text-decoration: none;
   color: black;
 }
 body {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+  font-size: 14px;
 }
 main {
   width: 100vw;
